feat: create GET and POST for shop
