# api/models/shop.go
@@ -3,10 +3,10 @@ package models
 import "time"
 
 type Shop struct {
-	ID             uint      `gorm:"primaryKey"`
-	Name           string    `gorm:"not null"`
-	Active         bool      `gorm:"default:true"`
-	WhatsAppNumber string    `gorm:"not null"`
+	ID             uint   `gorm:"primaryKey;autoIncrement:true"`
+	Name           string `gorm:"not null"`
+	Active         bool   `gorm:"default:true"`
+	WhatsAppNumber string `gorm:"not null"`
 	CreatedAt      time.Time
 
 	Users        []User
